# pkg/web/docs/swagger.json
@@ -104,6 +104,53 @@
                 }
             }
         },
+        "/sources/feeds/{id}": {
+            "put": {
+                "description": "Updates a feed with the specified configuration.",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Updates a feed.",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Feed ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/web.feed"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/sources/{id}": {
             "get": {
                 "description": "Returns the source configuration and metadata.",
@@ -149,13 +196,10 @@
             },
             "put": {
                 "description": "Updates the source configuration.",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Update source configuration.",
+                "summary": "Updates source configuration.",
                 "parameters": [
                     {
                         "type": "integer",
@@ -245,7 +289,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Source ID",
+                        "description": "Feed ID",
                         "name": "id",
                         "in": "path",
                         "required": true
